# simple_gfx

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  camera.h  light.h  main.cpp  model.cpp  model.h  scene.h
